# RayTracingChallenge

./: .gitignore  CMakeLists.txt  README.md  main.cpp
img/: cp10_Patterns.cpp  cp4_clock.cpp  cp5_sphere.cpp  cp6_LightingSphere.cpp  cp6_LightingSphereCameraVersion.cpp  cp7_Scene.cpp  cp9_SpheresOnAPlane.cpp
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Intersection.h  Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Tuple.cpp  Tuple.h
src-with-eigen/: CMakeLists.txt  Canvas.cpp  Canvas.h
src/geometry/: Intersections.cpp  Intersections.h  Plane.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h
src/linalg/: Matrix.cpp  Matrix.h  Tuple.cpp  Tuple.h  ViewTransform.h  macros.h
src/render/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.h
src/renderer/: Camera.h  Canvas.h  Color.cpp  Color.h  Material.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  World.cpp  World.h
src/scene/: PointLight.cpp  PointLight.h  World.cpp  World.h
src/scene/material/: Material.cpp  Material.h
src/scene/pattern/: CheckerPattern.cpp  CheckerPattern.h  GradientPattern.cpp  GradientPattern.h  Monocromatic.cpp  Monocromatic.h  Pattern.cpp  Pattern.h  RingPattern.cpp  RingPattern.h  StripePattern.cpp  StripePattern.h
src/shapes/: Hit.cpp  Hit.h  Intersections.cpp  Intersections.h  Plane.cpp  Plane.h  Shape.h  Sphere.cpp  Sphere.h
tests/: CMakeLists.txt  Camera.test.cpp  Canvas.test.cpp  Color.test.cpp  Hit.test.cpp  Intersections.test.cpp  Material.test.cpp  Matrix.test.cpp  Patterns.test.cpp  Plane.test.cpp  PointLight.test.cpp  Ray.test.cpp  Sphere.test.cpp  Tuple.test.cpp  ViewTransform.test.cpp  World.test.cpp
